--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
 
-		<a href="http://ninguchi.nndx.ml/img/Q2.zip">文件下载</a>
+		<a href="https://github.com/szkent/szkent.github.io/blob/master/Q2.zip">Q2</a>
 
 
 
